@@ -1,3 +1,8 @@
+Wed Aug 16 11:45:36 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (proc_setuid, proc_setgid, proc_seteuid, proc_setegid):
+	  get rid of bogus implementations on Mac OS X.
+
 Wed Aug 16 11:09:26 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ruby.c (set_arg0): fill argv other than the first with an empty
